# odm-to-gazebo-terrain-pipeline

./: Makeconfig  Makefile  README.md  requirements.txt
configs/examples/: classes.json
configs/semantics/: semantic_target_schema.json
gazebo/models/simple_bot/: model.config  model.sdf
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/rover_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/rover_bringup/behavior_trees/: navigate_through_poses_simple.xml  navigate_to_pose_simple.xml
ros2_ws/src/rover_bringup/config/: bridge.yaml  ekf.yaml  nav2_params.yaml
ros2_ws/src/rover_bringup/launch/: nav2_stack.launch.py  sim_nav.launch.py
ros2_ws/src/rover_bringup/rviz/: nav2_default.rviz
ros2_ws/src/terrain_gnn/: package.xml  setup.py
ros2_ws/src/terrain_gnn/terrain_gnn/: train_gnn.py
ros2_ws/src/terrain_perception/: package.xml  setup.py
ros2_ws/src/terrain_perception/launch/: object_detector_tracker.launch.py
ros2_ws/src/terrain_perception/terrain_perception/: object_detector_tracker.py
ros2_ws/src/terrain_semantics/: package.xml  setup.py
ros2_ws/src/terrain_semantics/launch/: semantic_segmentation.launch.py
ros2_ws/src/terrain_topology_nav/: package.xml  setup.py
scripts/: bridge_ros_gz.sh  build_heightmap.py  build_nav2_assets.py  build_semantic_class_map.py  build_semantic_masks.py  build_visibility_masks.py  build_visibility_masks_fast.py  build_world.py  common.sh  install_ros_gazebo_ubuntu.sh  launch_gazebo.sh  run_odm.sh  spawn_robot.sh  teleop.sh
templates/: world.sdf.in
(+48 files in other folders)
