<?xml version="1.0"?>
<package format="3">
  <name>rover_bringup</name>
  <version>0.0.1</version>
  <description>Launch and configuration package for Gazebo + bridge + Nav2 terrain stack</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
